apps/base/pathfinderwiki/10-ingress-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: pathfinderwiki
spec:
  redirectScheme:
    scheme: https
    permanent: true
