apps/base/pathfinderwiki/11-troubleshoot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-tools
  namespace: pathfinderwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-tools
  template:
    metadata:
      labels:
        app: debug-tools
    spec:
      containers:
        - name: debug-tools
          image: curlimages/curl:latest
          command: ["sh", "-c", "sleep infinity"]
          securityContext:
            runAsUser: 0
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
