apps/base/pathfinderwiki/09-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pathfinderwiki-ingress
  namespace: pathfinderwiki
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`pathfinderwiki.tommahs.nl`)
      priority: 10
      services:
        - kind: Service
          name: pathfinderwiki-nginx-service
          namespace: pathfinderwiki
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: pathfinderwiki-tls
